--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="description" content="Reaction time test, online reflex training, aim test, aim training, reaction game, sound reaction, sound reflex test">
   <link rel="icon" type="image/png" href="favicon.ico">
   <meta charset="UTF-8" />
   <title>Reaction Test</title>
