--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta name="description" content="Reaction time test, online reflex training, aim test, aim training, reaction game, sound reaction, sound reflex test">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="favicon.ico">
   <meta charset="UTF-8" />
   <title>Reaction Test</title>
