--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="description" content="Test your reaction time with a simple reflex game. Perfect for gamers who want to train and improve their reflex speed.">
+  <meta name="description" content="Test your reaction time with a simple reflex game like color changing, sound reaction and aim test. Perfect for gamers who want to train and improve their reflex speed.">
   <meta name="keywords" content="reaction test, reflex test, reaction time test, reflex speed test, reaction speed, improve reaction time, reflex training, fast reaction game, aim training game, improve aiming speed, mouse accuracy test, sound reaction test, reaction time to sound, improve sound reaction speed">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="favicon.ico">
